--- a/Backend/BITAMIN/build.gradle
+++ b/Backend/BITAMIN/build.gradle
@@ -40,6 +40,12 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
     implementation 'io.jsonwebtoken:jjwt-gson:0.12.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
+
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
+    implementation 'io.swagger.core.v3:swagger-annotations:2.2.8'
+    implementation 'io.swagger.core.v3:swagger-models:2.2.8'
 }
 
 tasks.named('test') {
