--- a/Backend/BITAMIN/build.gradle
+++ b/Backend/BITAMIN/build.gradle
@@ -37,9 +37,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-test'
-    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
-    implementation 'io.jsonwebtoken:jjwt-gson:0.12.5'
-    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+//    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+//    implementation 'io.jsonwebtoken:jjwt-gson:0.12.5'
+//    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
 
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
