--- a/Backend/BITAMIN/build.gradle
+++ b/Backend/BITAMIN/build.gradle
@@ -49,9 +49,11 @@ dependencies {
     implementation 'io.swagger.core.v3:swagger-models:2.2.8'
 
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
-
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
+    implementation 'software.amazon.awssdk:s3:2.20.40'
+    implementation 'software.amazon.awssdk:auth:2.20.40'
+    implementation 'software.amazon.awssdk:core:2.20.40'
 }
 
 tasks.named('test') {
