--- a/Backend/BITAMIN/build.gradle
+++ b/Backend/BITAMIN/build.gradle
@@ -52,6 +52,9 @@ dependencies {
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.h2database:h2'
+    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
