--- a/Backend/BITAMIN/build.gradle
+++ b/Backend/BITAMIN/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
+    implementation 'io.openvidu:openvidu-java-client:2.30.0'
 }
 
 tasks.named('test') {
