--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/api
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bitamin
 spring.datasource.username=ssafy
-spring.datasource.password=ssafy
+spring.datasource.password=fnffnfkffk
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.show_sql=true
