--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/api
 # include key
 spring.profiles.include=SECRET
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bitamin
+spring.datasource.url=${DB_ADDRESS}
 spring.datasource.username=${USERID}
 spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
