feat: openvidu session 생성

--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -20,3 +20,6 @@ jwt.expiration.refresh=300000
 #cloud.aws.credentials.secretKey=
 #cloud.aws.region.static=
 #cloud.aws.s3.bucket=
+
+openvidu.url: http://localhost:8080/api
+openvidu.secret: fnffnfkffk
