--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -24,5 +24,5 @@ jwt.expiration.refresh=300000
 #cloud.aws.region.static=
 #cloud.aws.s3.bucket=
 
-openvidu.url: http://localhost:4443/
-openvidu.secret: MY_SECRET
+openvidu.url: https://i11b105.p.ssafy.io:4443/
+openvidu.secret: wlvlxlsmssoclsrn0724
