--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=BITAMIN
 server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bitamin
-spring.datasource.username=ssafy
-spring.datasource.password=fnffnfkffk
+spring.datasource.url=${DB_ADDRESS}
+spring.datasource.username=${USERID}
+spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.show_sql=true
