--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=BITAMIN
 server.servlet.context-path=/api
 
+# include key
+spring.profiles.include=SECRET
+
 spring.datasource.url=${DB_ADDRESS}
 spring.datasource.username=${USERID}
 spring.datasource.password=${PASSWORD}
@@ -15,6 +18,11 @@ springdoc.swagger-ui.path=/swagger-ui.html
 jwt.secret=${JWT_SECRET}
 jwt.expiration.access=6000000000
 jwt.expiration.refresh=300000
+
+#cloud.aws.credentials.accessKey=
+#cloud.aws.credentials.secretKey=
+#cloud.aws.region.static=
+#cloud.aws.s3.bucket=
 
 openvidu.url: https://i11b105.p.ssafy.io:4443/
 openvidu.secret: wlvlxlsmssoclsrn0724
