--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -25,4 +25,9 @@ jwt.expiration.refresh=300000
 #cloud.aws.s3.bucket=
 
 openvidu.url: https://i11b105.p.ssafy.io:4443/
-openvidu.secret: wlvlxlsmssoclsrn0724
+openvidu.secret: ${OPENVIDU_SECRET}
+
+#GPT
+openai.model=gpt-4o
+openai.api.key=${OPENAI_API_KEY}
+openai.api.url= https://api.openai.com/v1/chat/completions
