feat: consultation ai 진행

--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -28,6 +28,6 @@ openvidu.url: https://i11b105.p.ssafy.io:4443/
 openvidu.secret: ${OPENVIDU_SECRET}
 
 #GPT
-openai.model=gpt-4o
+openai.model=gpt-4o-mini
 openai.api.key=${OPENAI_API_KEY}
 openai.api.url= https://api.openai.com/v1/chat/completions
