refactor: openvidu CORS 처리

--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -19,6 +19,11 @@ jwt.expiration.refresh=300000
 openvidu.url: https://i11b105.p.ssafy.io:4443/
 openvidu.secret: ${OPENVIDU_SECRET}
 
+# OpenVidu CORS ??
+openvidu.cors.origins=http://localhost:5173, http://localhost:5174
+openvidu.cors.allow-credentials=true
+
+
 #GPT
 openai.model=gpt-4o-mini
 openai.api.key=${OPENAI_API_KEY}
