Revert "Revert "Merge branch 'feat/62-s3build' into 'server-main'""
This reverts commit e759c431d6e06be673e463fa595f837d3c4f90e8

--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -28,3 +28,9 @@ openvidu.cors.allow-credentials=true
 openai.model=gpt-4o-mini
 openai.api.key=${OPENAI_API_KEY}
 openai.api.url= https://api.openai.com/v1/chat/completions
+
+#S3
+cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY}
+cloud.aws.credentials.secretKey=${AWS_SECRET_KEY}
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.s3.bucket=${AWS_BUCKET}
