--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -34,3 +34,8 @@ cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY}
 cloud.aws.credentials.secretKey=${AWS_SECRET_KEY}
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.s3.bucket=${AWS_BUCKET}
+
+#multiPart/form-data
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
