--- a/Backend/BITAMIN/build.gradle
+++ b/Backend/BITAMIN/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-json'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -59,6 +60,9 @@ dependencies {
     implementation 'software.amazon.awssdk:s3:2.17.89'
     implementation 'software.amazon.awssdk:auth:2.17.89'
     implementation 'software.amazon.awssdk:core:2.20.40'
+
+    implementation 'commons-fileupload:commons-fileupload:1.4'
+    implementation 'commons-io:commons-io:2.8.0'
 }
 
 tasks.named('test') {
