--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=BITAMIN
-server.servlet.context-path=/api
+server.servlet.context-path=/api/release
 
 # include key
 spring.profiles.include=SECRET
