hotfix: time 수정

--- a/Backend/BITAMIN/src/main/resources/application.properties
+++ b/Backend/BITAMIN/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 jwt.secret=${JWT_SECRET}
-jwt.expiration.access=600
+jwt.expiration.access=6000000
 jwt.expiration.refresh=300000
 
 openvidu.url: https://i11b105.p.ssafy.io:4443/
